# wayper

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  demo.tape  entry_cli.py  entry_gui.py  example-config.toml  pyproject.toml  wayper.spec
.agents/skills/: screenshot
.claude/: CLAUDE.md
.claude/commands/: review-ui.md  review_ui.py
.claude/skills/screenshot/: SKILL.md
.github/workflows/: release-aur.yml  release-macos.yml
assets/: icon.icns  wayper.desktop
docs/: README.zh-CN.md  _config.yml  index.html  index.md
docs/superpowers/plans/: 2026-03-27-electron-python-bundle.md  2026-03-29-image-search-filter.md  2026-03-29-sketchy-purity-support.md  2026-03-30-ai-tag-suggestions.md  2026-04-09-uploader-filtering.md  2026-04-22-lightbox-zoom-pan.md
docs/superpowers/specs/: 2026-03-29-image-search-filter-design.md  2026-03-29-sketchy-purity-support-design.md  2026-03-30-ai-tag-suggestions-design.md  2026-04-22-lightbox-zoom-pan-design.md
src/wayper/: cli.py  daemon.py  image.py  mcp_server.py  notify.py  pool.py  wallhaven.py
tests/: test_ai_suggestions.py  test_catalog.py  test_preference_model.py  test_regressions.py  test_suggestions.py  test_wallhaven_web.py
wayper/: __init__.py  ai_suggestions.py  backend.py  browse.py  catalog.py  cli.py  config.py  core.py  daemon.py  history.py  image.py  lock.py  logging.py  mcp_server.py  pool.py  preference_model.py  process.py  state.py  status.py  suggestions.py  tags.py  trash.py  update.py  util.py  wallhaven.py  wallhaven_web.py
wayper/backend/: __init__.py  base.py  linux.py  macos.py  windows.py
wayper/browse/: __init__.py  _common.py  gtk.py  macos.py
wayper/electron/: api.js  blocklist-pager.js  exclusion-rules.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer-data.js  renderer-lightbox.js  renderer-state.js  renderer-views.js  renderer.js  styles.css
wayper/electron/tests/: blocklist-pager.test.js  exclusion-rules.test.js  model-review-actions.test.js
wayper/gui/: __init__.py  actions.py  actions_view.py  app.py  browse_view.py  colors.py  daemon_control.py  main_window.py  settings_window.py
wayper/gui/electron/: index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
wayper/gui/gtk/: __init__.py  actions_view.py  app.py  browse_view.py  css.py  daemon_control.py  main_window.py  settings_window.py  wallhaven_view.py
wayper/gui/macos/: _style_helpers.py  actions_view.py  app.py  browse_view.py  colors.py  daemon_control.py  main_window.py  settings_window.py  wallhaven_view.py
wayper/preference/: __init__.py  model.py  training.py
wayper/server/: api.py  config_service.py  entry.py  launcher.py  schemas.py
wayper/web/: api.py  entry.py  launcher.py
