[project]
name = "wayper"
version = "0.7.4"
description = "Cross-platform wallpaper manager with Wallhaven integration"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-Cocoa>=10.0", "pyobjc-framework-Quartz>=10.0"]
linux = ["PyGObject>=3.42"]

[project.scripts]
wayper = "wayper.cli:cli"
wayper-gui = "wayper.gui:run_app"
wayper-mcp = "wayper.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wayper"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"wayper/gui/gtk/*.py" = ["E402"]
