[project]
name = "wayper"
version = "0.9.3"
description = "Cross-platform wallpaper manager with Wallhaven integration"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "mcp>=1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "send2trash>=1.8",
]

[project.scripts]
wayper = "wayper.cli:cli"
wayper-gui = "wayper.server.launcher:run_app"
wayper-mcp = "wayper.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wayper"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

