[project]
name = "wayper"
version = "1.5.10"
description = "Cross-platform wallpaper manager with Wallhaven integration"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "mcp>=1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "send2trash>=1.8",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
browser = ["browser-cookie3>=0.20", "nodriver>=0.38"]

[project.scripts]
wayper = "wayper.cli:cli"
wayper-gui = "wayper.server.launcher:run_app"
wayper-mcp = "wayper.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wayper"]

[tool.hatch.build.targets.wheel.shared-data]
"assets/wayper.desktop" = "share/applications/wayper.desktop"
"assets/icon.svg" = "share/icons/hicolor/scalable/apps/wayper.svg"
"assets/icon-32.png" = "share/icons/hicolor/32x32/apps/wayper.png"
"assets/icon-64.png" = "share/icons/hicolor/64x64/apps/wayper.png"
"assets/icon-128.png" = "share/icons/hicolor/128x128/apps/wayper.png"
"assets/icon-256.png" = "share/icons/hicolor/256x256/apps/wayper.png"
"assets/icon-512.png" = "share/icons/hicolor/512x512/apps/wayper.png"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

